# wevra

./: .env.example  .gitignore  LICENSE  README.ja.md  README.md  pyproject.toml  wevra  wevra.ini.example
.github/workflows/: ci.yml
src/wevra/: __init__.py  cli.py  config.py  dashboard.py  db.py  models.py  runtime_registry.py  service.py
src/wevra/static/: index.html
src/wevra/static/i18n/: en.json  ja.json
src/wevra/templates/: agents.ini.example  wevra.ini.example
tests/: test_cli.py  test_dashboard_e2e.py  test_runtime_components.py
