[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wevra"
version = "0.2.0"
description = "Structured AI workflow engine."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.7,<3.0",
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.12,<1.0",
]

[project.scripts]
wevra = "wevra.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wevra = ["static/*.html"]
